--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,4 @@
 #This will list out the requirements for this program to work
 pi-rc522
+
+# also please enable serial interface via sudo raspi-config otherwise code will error
